--- a/electron/app/html/index.html
+++ b/electron/app/html/index.html
@@ -11,6 +11,7 @@
 	<script src="../js/select2.min.js"></script>
 
 	<div ng-controller="ResultCtrl" class='container'>
+		<div><h2 id="status">{{status_text}}</h2></div>
 		<div class='col1 head'>
 			<div id="room" class="select">
 			    <select data-ng-model="roomModel" ng-change="changedValue('room',roomModel)" style="width: 100%;">
